test/corpus/github.txt
==================
github search #1
==================
user  nginx;
worker_processes auto;
worker_cpu_affinity auto;
pcre_jit on;
timer_resolution 100ms;

error_log  /var/log/nginx/error.log warn;
pid        /var/run/nginx.pid;

events {
    worker_connections  1024;
    worker_aio_requests 128;
}

thread_pool metadata threads=32;
thread_pool default threads=32;

http {
    include       /etc/nginx/mime.types;
    default_type  application/octet-stream;

    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                      '$status $body_bytes_sent "$http_referer" '
                      '"$http_user_agent" "$http_x_forwarded_for"';

    access_log  /var/log/nginx/access.log  main;

    sendfile           on;
    sendfile_max_chunk 2m;
    tcp_nopush         on;
    aio_write          on;
    directio           10m;

    keepalive_timeout  65;

    include /etc/nginx/conf.d/*.conf;
}

---

    (source_file
      (directive
        (keyword)
        (value))
      (directive
        (keyword)
        (auto))
      (directive
        (keyword)
        (auto))
      (directive
        (keyword)
        (boolean
          (on)))
      (directive
        (keyword)
        (time))
      (directive
        (keyword)
        (file)
        (level))
      (directive
        (keyword)
        (file))
      (directive
        (keyword)
        (block
          (directive
            (keyword)
            (numeric_literal))
          (directive
            (keyword)
            (numeric_literal))))
      (directive
        (keyword)
        (value)
        (variable
          (keyword)
          (numeric_literal)))
      (directive
        (keyword)
        (value)
        (variable
          (keyword)
          (numeric_literal)))
      (attribute
        (keyword)
        (block
          (directive
            (keyword)
            (file))
          (attribute
            (keyword)
            (value))
          (attribute
            (keyword)
            (value)
            (string_literal)
            (string_literal)
            (string_literal))
          (attribute
            (keyword)
            (value)
            (value))
          (attribute
            (keyword)
            (boolean
              (on)))
          (attribute
            (keyword)
            (time))
          (attribute
            (keyword)
            (boolean
              (on)))
          (attribute
            (keyword)
            (boolean
              (on)))
          (attribute
            (keyword)
            (time))
          (attribute
            (keyword)
            (numeric_literal))
          (directive
            (keyword)
            (mask)))))
